--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1379,4 +1379,9 @@ layout: default
   }
 }
 
+.iframe-wrap{
+  position:relative; width:100%; padding-top:56.25%;
+  border-radius:16px; overflow:hidden; border:1px solid #1f1f1f; background:#0b0b0b;
+}
+.iframe-wrap iframe{ position:absolute; inset:0; width:100%; height:100%; border:0; }
 
