--- a/_includes/promo.html
+++ b/_includes/promo.html
@@ -16,7 +16,8 @@
     <div class="md-promo__text">
       <strong class="md-promo__title"></strong>
       <span class="md-promo__desc"></span>
-      <span class="md-promo__note">eu selecionei esse item; link oficial/afiliado ✅</span>
+      <span Eu achei esse produto com ótimo custo-benefício.
+</span>
       <span class="md-promo__cta">Ver</span>
     </div>
   </a>
