Atualizar o promo.html

--- a/_includes/promo.html
+++ b/_includes/promo.html
@@ -16,7 +16,7 @@
     <div class="md-promo__text">
       <strong class="md-promo__title"></strong>
       <span class="md-promo__desc"></span>
-      <span Eu achei esse produto com ótimo custo-benefício.
+      <span> Eu achei esse produto com ótimo custo-benefício.
 </span>
       <span class="md-promo__cta">Ver</span>
     </div>
